--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -947,7 +947,7 @@
 					"date": "Date",
 					"actions": "Actions"
 				},
-				"search": "Search...",
+				"search": "Search",
 				"dateWithYear": "{{dateText}}, {{year}}"
 			},
 			"days": {
